--- a/packages/@rm-frontend/storybook/source/Colors.stories.mdx
+++ b/packages/@rm-frontend/storybook/source/Colors.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/addon-docs/blocks';
 import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 <Meta title="Design Tokens/Colors" />
@@ -6,10 +6,13 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 # Colors
 
 ## Colors: Brand
+
 <DesignTokenDocBlock categoryName="Colors: Brand" />
 
 ## Colors: Functional
+
 <DesignTokenDocBlock categoryName="Colors: Functional" />
 
 ## Colors: Misc
+
 <DesignTokenDocBlock categoryName="Colors: Misc" />
