--- a/packages/@rm-frontend/storybook/source/Icons.stories.mdx
+++ b/packages/@rm-frontend/storybook/source/Icons.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/addon-docs/blocks';
 import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 <Meta title="Design Tokens/Icons" />
@@ -6,4 +6,5 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 # Icons
 
 ## Icons: SVG
+
 <DesignTokenDocBlock categoryName="SVG Icons" />
