--- a/packages/@rm-frontend/storybook/source/Typography.stories.mdx
+++ b/packages/@rm-frontend/storybook/source/Typography.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/addon-docs/blocks';
 import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 <Meta title="Design Tokens/Typography" />
@@ -6,13 +6,17 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 # Typography
 
 ## Fonts: Families
+
 <DesignTokenDocBlock categoryName="Fonts: Families" viewType="card" />
 
 ## Fonts: Sizes
+
 <DesignTokenDocBlock categoryName="Fonts: Sizes" />
 
 ## Fonts: Weights
+
 <DesignTokenDocBlock categoryName="Fonts: Weights" />
 
 ## Fonts: Line Heights
+
 <DesignTokenDocBlock categoryName="Fonts: Line Heights" />
