feat: add first design tokens & refactor quote component
add design tokens for
* colors
* typography
* spacing

WIP: the new css custom properties break the storybook-design-token addon,
so i temporarily deactivated it

--- a/packages/tools/storybook/source/Typography.stories.mdx
+++ b/packages/tools/storybook/source/Typography.stories.mdx
@@ -5,17 +5,17 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 # Typography
 
-## Fonts: Families
+## Font Families
 
-<DesignTokenDocBlock categoryName="Fonts: Families" viewType="card" />
+<DesignTokenDocBlock categoryName="Font Families" viewType="card" />
 
 ## Fonts: Sizes
 
-<DesignTokenDocBlock categoryName="Fonts: Sizes" />
+<DesignTokenDocBlock categoryName="Font Sizes" />
 
-## Fonts: Weights
+## Font Weights
 
-<DesignTokenDocBlock categoryName="Fonts: Weights" />
+<DesignTokenDocBlock categoryName="Font Weights" />
 
 ## Fonts: Line Heights
 
