--- a/packages/tools/storybook/source/Colors.stories.mdx
+++ b/packages/tools/storybook/source/Colors.stories.mdx
@@ -9,6 +9,10 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 <DesignTokenDocBlock categoryName="Colors: Brand" />
 
+## Colors: Shades
+
+<DesignTokenDocBlock categoryName="Colors: Shades" />
+
 ## Colors: Functional
 
 <DesignTokenDocBlock categoryName="Colors: Functional" />
