feat: add background- & text-color tokens
#622

--- a/packages/components/core/source/design-tokens/colors/colors.stories.mdx
+++ b/packages/components/core/source/design-tokens/colors/colors.stories.mdx
@@ -9,27 +9,41 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 <DesignTokenDocBlock categoryName="Colors: Brand" viewType="card" />
 
-### Primary Alpha
+## Background
 
-<DesignTokenDocBlock categoryName="Colors: Primary Alpha" viewType="table" />
+### Accent
 
-### Primary Lighter
+<DesignTokenDocBlock categoryName="Colors: Background Accent" viewType="table" />
 
-<DesignTokenDocBlock categoryName="Colors: Primary Lighter" viewType="table" />
+### Clear
 
-### Primary Darker
+<DesignTokenDocBlock categoryName="Colors: Background Clear" viewType="table" />
 
-<DesignTokenDocBlock categoryName="Colors: Primary Darker" viewType="table" />
+### Default
 
-## Shades
+<DesignTokenDocBlock categoryName="Colors: Background Default" viewType="table" />
 
-### White Shades
+### Interface
 
-<DesignTokenDocBlock categoryName="Colors: Shades White" viewType="table" />
+<DesignTokenDocBlock categoryName="Colors: Background Interface" viewType="table" />
 
-### Black Shades
+### Primary
 
-<DesignTokenDocBlock categoryName="Colors: Shades Black" viewType="table" />
+<DesignTokenDocBlock categoryName="Colors: Background Primary" viewType="table" />
+
+## Text
+
+### Default
+
+<DesignTokenDocBlock categoryName="Colors: Text Default" viewType="table" />
+
+### Interface
+
+<DesignTokenDocBlock categoryName="Colors: Text Interface" viewType="table" />
+
+### Primary
+
+<DesignTokenDocBlock categoryName="Colors: Text Primary" viewType="table" />
 
 ## Semantic
 
