refactor: move token primitives in single json file

--- a/packages/components/core/source/design-tokens/typography.stories.mdx
+++ b/packages/components/core/source/design-tokens/typography.stories.mdx
@@ -14,24 +14,20 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 ### Display
 
 <div className="foo">
-  <DesignTokenDocBlock categoryName="Font Sizes Display" viewType="table"/>
+  <DesignTokenDocBlock categoryName="Font Sizes: display" viewType="table"/>
 </div>
 
 ### Copy
 
-<DesignTokenDocBlock categoryName="Font Sizes Copy" viewType="table" />
+<DesignTokenDocBlock categoryName="Font Sizes: copy" viewType="table" />
 
 ### UI
 
-<DesignTokenDocBlock categoryName="Font Sizes UI" viewType="table" />
+<DesignTokenDocBlock categoryName="Font Sizes: ui" viewType="table" />
 
 ### Mono
 
-<DesignTokenDocBlock categoryName="Font Sizes Mono" viewType="table" />
-
-## Line Heights
-
-<DesignTokenDocBlock categoryName="Line Heights" viewType="table" />
+<DesignTokenDocBlock categoryName="Font Sizes: mono" viewType="table" />
 
 ## Font Weights
 
