feat: optimize token css file
* minimize color values
* remove whitespaces on production
* remove file header on production

--- a/packages/components/core/source/design-tokens/colors.stories.mdx
+++ b/packages/components/core/source/design-tokens/colors.stories.mdx
@@ -9,7 +9,10 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 ### Accent
 
-<DesignTokenDocBlock categoryName="Colors: Background Accent" viewType="table" />
+<DesignTokenDocBlock
+  categoryName="Colors: Background Accent"
+  viewType="table"
+/>
 
 ### Clear
 
@@ -17,15 +20,24 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 ### Default
 
-<DesignTokenDocBlock categoryName="Colors: Background Default" viewType="table" />
+<DesignTokenDocBlock
+  categoryName="Colors: Background Default"
+  viewType="table"
+/>
 
 ### Interface
 
-<DesignTokenDocBlock categoryName="Colors: Background Interface" viewType="table" />
+<DesignTokenDocBlock
+  categoryName="Colors: Background Interface"
+  viewType="table"
+/>
 
 ### Primary
 
-<DesignTokenDocBlock categoryName="Colors: Background Primary" viewType="table" />
+<DesignTokenDocBlock
+  categoryName="Colors: Background Primary"
+  viewType="table"
+/>
 
 ## Text
 
