docs: add border-radius & box-shadow token stories

--- a/packages/components/core/source/design-tokens/colors.stories.mdx
+++ b/packages/components/core/source/design-tokens/colors.stories.mdx
@@ -5,6 +5,13 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 # Colors
 
+### Primary
+
+<DesignTokenDocBlock
+  categoryName="Colors: Primary"
+  viewType="table"
+/>
+
 ## Background
 
 ### Accent
@@ -52,7 +59,3 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 ### Primary
 
 <DesignTokenDocBlock categoryName="Colors: Text Primary" viewType="table" />
-
-## Semantic
-
-<DesignTokenDocBlock categoryName="Colors: Functional" viewType="card" />
