--- a/packages/components/core/source/design-tokens/colors.stories.mdx
+++ b/packages/components/core/source/design-tokens/colors.stories.mdx
@@ -12,6 +12,13 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
   viewType="table"
 />
 
+### Foreground
+
+<DesignTokenDocBlock
+  categoryName="Colors: Foreground"
+  viewType="table"
+/>
+
 ## Background
 
 ### Accent
