chore: move collapsible box & contact components to base

--- a/packages/components/core/source/design-tokens/border-radius.stories.mdx
+++ b/packages/components/core/source/design-tokens/border-radius.stories.mdx
@@ -5,7 +5,4 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 # Border Radius
 
-<DesignTokenDocBlock
-  categoryName="Border Radius"
-  viewType="table"
-/>
+<DesignTokenDocBlock categoryName="Border Radius" viewType="table" />
