--- a/packages/components/core/source/design-tokens/colors.stories.mdx
+++ b/packages/components/core/source/design-tokens/colors.stories.mdx
@@ -7,17 +7,11 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 ### Primary
 
-<DesignTokenDocBlock
-  categoryName="Colors: Primary"
-  viewType="table"
-/>
+<DesignTokenDocBlock categoryName="Colors: Primary" viewType="table" />
 
 ### Foreground
 
-<DesignTokenDocBlock
-  categoryName="Colors: Foreground"
-  viewType="table"
-/>
+<DesignTokenDocBlock categoryName="Colors: Foreground" viewType="table" />
 
 ## Background
 
