--- a/packages/components/core/source/design-tokens/typography.stories.mdx
+++ b/packages/components/core/source/design-tokens/typography.stories.mdx
@@ -21,9 +21,9 @@ import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
 
 <DesignTokenDocBlock categoryName="Font Sizes: copy" viewType="table" />
 
-### UI
+### Interface
 
-<DesignTokenDocBlock categoryName="Font Sizes: ui" viewType="table" />
+<DesignTokenDocBlock categoryName="Font Sizes: interface" viewType="table" />
 
 ### Mono
 
