--- a/packages/tools/docusaurus/docs/basics/tokens/colors.mdx
+++ b/packages/tools/docusaurus/docs/basics/tokens/colors.mdx
@@ -4,7 +4,7 @@ sidebar_position: 2
 
 import { TokenTable } from 'storybook-design-token/dist/components/TokenTable';
 
-# Color
+# Color TokenTable
 
 ## Primary
 
@@ -52,7 +52,8 @@ Primary color mixed with the background color
 
       }))
     },
-  ]}
+
+]}
 />
 
 ### To foreground
@@ -77,7 +78,8 @@ Primary color mixed with the foreground color
 
       }))
     },
-  ]}
+
+]}
 />
 
 ### Alpha
@@ -100,7 +102,8 @@ Primary color mixed with the foreground color
 
       }))
     },
-  ]}
+
+]}
 />
 
 ## Foreground
