docs(typo): add typo page

--- a/packages/tools/docusaurus/docs/basics/tokens/colors-demos.mdx
+++ b/packages/tools/docusaurus/docs/basics/tokens/colors-demos.mdx
@@ -189,7 +189,7 @@ Short example demonstrating how color tokens apply to Buttons:
       tokens: [
         {
           presenter: 'Color',
-          name: '--ks-color-fg',
+          name: '--ks-text-color-primary-inverted',
           value: 'var(--ks-color-primary-inverted)',
           sourceType: 'CSS',
         },
@@ -215,7 +215,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing something about points, sed d
       tokens: [
         {
           presenter: 'Color',
-          name: '--ks-color-fg',
+          name: '--ks-text-color-primary-inverted',
           value: 'fuchsia',
           sourceType: 'CSS',
         },
@@ -253,7 +253,7 @@ Velit euismod in pellentesque massa placerat. Mi bibendum neque egestas congue q
       tokens: [
         {
           presenter: 'Color',
-          name: '--ks-color-fg',
+          name: '--ks-text-color-primary-inverted',
           value: 'green',
           sourceType: 'CSS',
         },
@@ -291,7 +291,7 @@ Id aliquet risus feugiat in ante metus dictum at tempor. Sed blandit libero volu
       tokens: [
         {
           presenter: 'Color',
-          name: '--ks-color-fg',
+          name: '--ks-text-color-primary-inverted',
           value: 'orange',
           sourceType: 'CSS',
         },
