docs(basics): edit various pages

--- a/packages/tools/docusaurus/docs/basics/tokens/colors-demos.mdx
+++ b/packages/tools/docusaurus/docs/basics/tokens/colors-demos.mdx
@@ -156,7 +156,7 @@ Primary color mixed with the foreground color
 
 ## Usage in Buttons
 
-Short example demonstrating how color tokens apply to Buttons:
+Short example demonstrating how color token apply to Buttons:
 
 <CH.Spotlight preset="https://codesandbox.io/s/cool-pine-d8qr18" start={1}>
 
