--- a/packages/tools/docusaurus/docs/guides/create.mdx
+++ b/packages/tools/docusaurus/docs/guides/create.mdx
@@ -257,7 +257,18 @@ This will also give us the opportunity to set up `Storybook`, and get a first vi
 
 ## 4. Component Selection
 
-This should be accompagnied by Guides following our `Design System Initiative`:<br/>
+Now we'll get to the meat of it... adding your first set of components. Which ones you'll utimately need, and subsequentially build, can vary wildly based on your Design System needs. We'll add some exemplary ones now, to illustrate the main ways we offer to do this:
+
+- Component Workflow 1
+- Component Workflow 2
+- Component Workflow 3
+
+Feel free to change these examplary components being implemented around to something you'll actually need, if you happen to have something in mind already.<br/>
+We'll try adding some components that are commonly needed, so it should be a good starting point either way!
+
+If you want to take a deeper dive on finding your first component set right now, jump over to our Guides around the `Design System Initiative`, and come back to this point later!
+
+TODO This should be linked to Guides following our `Design System Initiative`:<br/>
 https://www.kickstartds.com/services/
 
 Should also include prominent call out to that `services` page, to advertise our agency services around this!
@@ -286,6 +297,14 @@ Orthogonal to that, we will also need Guides on additional styling / theming / b
 
 ### Establish structure
 
-### Map components
+### Implementation
+
+#### Component implementation workflow 1
+
+#### Component implementation workflow 2
+
+#### Component implementation workflow 3
+
+#### Fine tuning `Component Token`
 
 ## 5. Publish your Design System
