docs(guides): refine intro for create DS guide

--- a/packages/tools/docusaurus/docs/guides/create.mdx
+++ b/packages/tools/docusaurus/docs/guides/create.mdx
@@ -8,9 +8,22 @@ import Admonition from 'react-admonitions';
 
 ## Overview
 
-5 steps to a successful Design System!
+In this guide we'll get your first Design System, based on **kickstartDS** of course, off the ground in just 5 rather simple steps!
+
+You could say that this is **the** main guide for **kickstartDS**, as it branches out into a bunch of sub guides in the process. Hopefully giving you a well-rounded overview over everything offered and possible in the end. While also creating the draft for your first Design System in the process!
+
+The main steps will go as follows:
+
+1. [Start your Design System](#1-start-your-design-system)
+2. [Design Application](#2-design-application)
+3. [Configure Storybook](#3-configure-storybook)
+4. [Add Components](#4-add-components)
+5. [Publish your Design System](#5-publish-your-design-system)
+
+As said, the resulting Design System will obviously not be finished by the end of this guide, but you'll have everything set up to start on the real work. We'll add links along the way, when it makes sense, calling out concepts in play or processes to use to find and refine your own personalized use (stuff like choosing an initial component set for your Design System).
 
 TODO add link to video version on YouTube
+TODO add link to starter to shortcut guide
 
 ## 1. Start your Design System
 
@@ -208,7 +221,7 @@ Learn more about the different modules **kickstartDS** has to offer in our [over
 
 </CH.Scrollycoding>
 
-This will leave us with the following files for now, at least if you've started fresh:
+This will leave us with the following files for now, at least if you've started afresh:
 
 <CH.Section>
 <CH.Code>
@@ -238,7 +251,7 @@ This will leave us with the following files for now, at least if you've started 
 </CH.Code>
 </CH.Section>
 
-We'll continue by applying our branding to **kickstartDS**, which will result in a bunch of token files (`JSON`) being added.<br/>
+We'll continue by applying our branding to **kickstartDS**, which will result in a bunch of token files (`JSON`) being added to the project.<br/>
 This will also give us the opportunity to set up `Storybook`, and get a first visual representation of our Design System in the browser!
 
 ## 2. Design Application
@@ -249,7 +262,9 @@ This will also give us the opportunity to set up `Storybook`, and get a first vi
 
 ## 3. Configure Storybook
 
-## 4. Component Selection
+TODO there should be a page detailing `Storybook`, and our usage of it, somewhere. Probably `Integrations`... write and link it
+
+## 4. Add Components
 
 Now we'll get to the meat of it... adding your first set of components. Which ones you'll utimately need, and subsequentially build, can vary wildly based on your Design System needs. We'll add some exemplary ones now, to illustrate the main ways we offer to do this:
 
